# popurri

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: tox-testing.yml
data/spectrograph/: carmvis_orders.csv  criresplus_orders.csv  harps_orders.csv  spectrograph_properties.csv
docs/: api.rst  conf.py  guides.rst  index.rst  installation.rst  requirements.txt  spectrograph_properties_orders_test.ipynb  testing.rst
docs/guides/: spectrograph_guide.ipynb  tellurics_guide.ipynb
popurri/: peakutils.py  plotutils.py  pyproject.toml  spectrograph.py  spectrum.py  telluricutils.py  utils.py
popurri/data/spectrograph/: carmnir_orders.csv  criresplus_ghosts.csv  espresso_orders.csv  header_kws.csv
popurri/scripts/: tellmask_from_esoskycalc.py
tests/: test_spectrograph.py  test_spectrum.py
