[project]
name = "popurri"
description = "Useful basic astro tools"
readme = "README.rst"
authors = [
    { name = "Marina Lafarga Magro", email = "marina.lafarga@gmail.com" }
]
license = { text = "MIT License" }
dependencies = [
    "numpy",
    "astropy",
    "pandas",
    "scipy",
    "lmfit",
    "matplotlib",
    "cmocean",
    "colorcet",
    "tqdm",
    "ipdb",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/mlafarga/popurri"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "numpydoc",
    "sphinx_rtd_theme",
    "nbsphinx",
    "sphinx-copybutton",
]
test = [
    "pytest>=7",
    # "pytest-doctestplus",
]

[project.scripts]
tellmask = 'popurri.scripts.tellmask_from_esoskycalc:main'

[tool.setuptools]

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "popurri/_version.py"

[tool.pytest.ini_options]
pythonpath = [
  "./tests"
]
